repair bugged on mobile

--- a/assets/css/colored/main.scss
+++ b/assets/css/colored/main.scss
@@ -22,8 +22,9 @@ a {
 
 footer {
   font-weight: normal;
-  height: 415px;
+  height: 455px;
   background: #0D0D0D url("/assets/images/footer_map.png") no-repeat;
+  background-size: contain;
 
   .information {
     img {
@@ -303,7 +304,6 @@ i.fa-envelope {
   border-radius: 20px;
   padding: 10px;
   display: inline-block;
-  margin: 40px;
   width: 90%;
   max-width: 430px;
   min-width: 340px;
@@ -363,6 +363,7 @@ i.fa-envelope {
       }
 
       ul {
+        list-style: none;
         padding: 0;
       }
     }
@@ -380,10 +381,6 @@ i.fa-envelope {
 
 .is-info-container {
   padding-top: 40px;
-}
-
-.gs-buttons {
-  padding: 40px;
 }
 
 .is-info {
@@ -413,7 +410,6 @@ i.fa-envelope {
   font-weight: bold;
   float: right;
   padding: 25px;
-  margin: 0 20px;
   width: calc(100% - 40px);
   height: 50px;
 
@@ -466,7 +462,9 @@ i.fa-envelope {
 }
 
 .story {
-  font-size: 24pt;
+  font-size: 18pt;
+  font-weight: normal;
+  text-align: justify;
 }
 
 .shop {
